# paradox-mod-translator

./: .env.template  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  task.template.toml
.claude/: rust-analyzer.json  settings.json
.github/workflows/: release.yml
data/glossary/: stellaris.json
data/prompts/: translate_system.txt
docs/: about_glossary.md  about_localisation.md  project_structure.md  workflow.md
src/: error.rs  lib.rs  main.rs
src/config/: client_settings.rs  env.rs  mod.rs  task.rs
src/postprocess/: cleanup.rs  merger.rs  mod.rs  writer.rs
src/preprocess/: file_prepare.rs  mod.rs  normalizer.rs  splitter.rs  yaml_fixer.rs
src/translate/: batcher.rs  glossary.rs  mod.rs  splitter.rs  translator.rs  validator.rs
src/translate/api/: client.rs  mod.rs  models.rs
src/utils/: fs.rs  logger.rs  mod.rs  regex_patterns.rs  token_estimator.rs
tests/localisation/english/: l_english_pf_misc.yml
