[package]
name = "paradox-mod-translator"
version = "0.1.0"
edition = "2024"
authors = ["Rosmeowtis <rosmeowtis@outlook.com>"]
description = "AI-powered translator for Paradox game mods"
license = "MIT"
repository = ""

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dotenvy = "0.15"
indicatif = "0.17"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.5"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
toml = "0.8"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
assert_fs = "1.0"

[[bin]]
name = "pmt"
path = "src/main.rs"
